--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ h1, h2, h3 {
     margin: 0;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 700;
+    font-size: 30px;
 }
 
 /* Line Height */
@@ -19,7 +20,7 @@ p {
 }
 
 /* Width of Body Containers */
-.header-container, .first-section, .second-section {
+.header-container, .first-section-container, .second-section-container {
     width: 1170px;
     margin: 0 auto;
 }
@@ -27,6 +28,7 @@ p {
 /* Body */
 body {
     margin: 0;
+    font-size: 15px;
 }
 
 /* Header */
@@ -62,7 +64,6 @@ body {
 }
 .about-dream-span {
     font-size: 59px;
-    font-weight: 900;
     margin: 35px 0 0 0;
 }
 
@@ -77,7 +78,6 @@ body {
     background: #ffd429;
     color: #2e2a1b;
     font-family: 'Montserrat', sans-serif;
-    font-size: 15px;
     text-align: center;
     text-decoration: none;
     display: block;
@@ -102,7 +102,6 @@ body {
 .first-section-header {
     text-align: center;
     text-decoration: none;
-    font-size: 30px;
     padding: 100px 0 0 0;
 }
 
@@ -114,21 +113,19 @@ body {
 }
 
 .expectation {
-    width: 300px;
+    width: 285px;
     text-align: center;
     text-decoration: none;
-    font-family: 'Ubuntu', sans-serif;
     margin: 70px 0 115px 0;
 }
 
 .expectation-header {
     font-size: 19px;
-    font-weight: 700;
     margin: 30px 0 0 0;
 }
 .expectation-paragraph {
-    font-size: 15px;
     font-weight: 400;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 /* Second Section */
@@ -143,7 +140,6 @@ body {
 .second-section-header {
     text-align: center;
     text-decoration: none;
-    font-size: 30px;
     padding: 100px 0 60px 0;
 }
 
@@ -152,7 +148,6 @@ input {
     height: 50px;
     border: 1px solid #bbbbbb;
     border-radius: 2px;
-    font-size: 15px;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 400;
     padding-left: 22px;
@@ -186,26 +181,27 @@ footer {
 
 /* 992-1200px */
 @media screen and (max-width: 1200px) {
-    .header-container, .first-section, .second-section {
+    .header-container, .first-section-container, .second-section-container {
         width: 1140px;
     }
 }
 
 /* 992px - 1200px */
 @media screen and (max-width: 992px) {
-    .header-container, .first-section, .second-section {
+    .header-container, .first-section-container, .second-section-container {
         width: 960px;
     }
 }
 
 /* 768px - 992px */
 @media screen and (max-width: 768px) {
-    .header-container, .first-section, .second-section {
+    .header-container, .first-section-container, .second-section-container {
         width: 720px;
     }
 }
 
 /* 0 - 576px */
-@media screen and (max-width: 576px) {
+/* @media screen and (max-width: 576px) {
+    .header-container, .first-section-container, .second-section-container
 
-}
+} */
